RESOLVED FIXED139876
TextIndicatorWindow is larger than it needs to be, especially when not bouncing
https://bugs.webkit.org/show_bug.cgi?id=139876
Summary TextIndicatorWindow is larger than it needs to be, especially when not bouncing
Tim Horton
Reported 2014-12-22 13:47:17 PST
TextIndicatorWindow is larger than it needs to be, especially when not bouncing
Attachments
Patch (8.58 KB, patch)
2014-12-22 13:48 PST, Tim Horton
sam: review+
Tim Horton
Comment 1 2014-12-22 13:48:29 PST
Tim Horton
Comment 2 2014-12-22 14:19:05 PST
Note You need to log in before you can comment on or make changes to this bug.